gcc/fortran: 2007-07-12  Daniel Franke  <franke.daniel@gmail.com>

PR fortran/31639
	* decl.c (gfc_match_suffix): Removed surplus general error that hides
	a more specific message.
	* resolve.c (resolve_fl_variable): Reject illegal initializiers only
	if not already done.
	(resolve_fl_procedure): Added check for initializers of functions.

gcc/testsuite:
2007-07-12  Daniel Franke  <franke.daniel@gmail.com>

	PR fortran/31639
	* gfortran.dg/func_decl_4.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126605 138bc75d-0d04-0410-961f-82ee72b054a4